--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Environment variables
 .env
+
+# Python virtual environment
+venv/
+__pycache__/
+*.pyc
+
+# Application data
+previous_events.json
+
+# IDE files
+.vscode/
+.idea/
+
+# System files
+.DS_Store
+Thumbs.db
